# actix-web-demo

./: Cargo.toml  Dockerfile  buildspec.yml
src/: health_check.rs  hello_world_controller.rs  main.rs
